[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/components/reactive_button.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/fxs/Select 3 (Blub).wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[node name="ReactiveButton" type="ToolButton"]
margin_top = 24.0
margin_right = 231.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 577, 37 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "NEW_GAME"
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFXS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )
anims/rainbow = SubResource( 4 )
[connection signal="focus_entered" from="." to="." method="_on_ReactiveButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ReactiveButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ReactiveButton_mouse_entered"]
